fix: Edit gap

--- a/src/containers/contact/Contact.scss
+++ b/src/containers/contact/Contact.scss
@@ -59,7 +59,7 @@
   .contact-info-item {
     display: flex;
     align-items: center;
-    gap: 6px;
+    gap: 8px;
     margin-bottom: 12px;
 
     .icon {
@@ -78,7 +78,7 @@
   .contact-info-item-mobile {
     display: flex;
     align-items: center;
-    gap: 2px;
+    gap: 6px;
     margin-bottom: 12px;
 
     .icon {
